force-app/main/default/objects/Chat_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Chat Messages</relationshipLabel>
        <relationshipName>Chat_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Chat Message</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Chat Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>