force-app/main/default/objects/Chat_Message__c/fields/Live_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Live_Chat_Transcript ids</description>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>